# py-iztro

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: coverage.yml
js_test/: config.js  package-lock.json  package.json
src/py_iztro/: __init__.py  astro.py  models.py
src/py_iztro/core/: astro.py  models.py
src/py_iztro/res/: iztro-2.4.4.min.js  iztro-2.4.9.min.js  iztro-2.5.0.min.js
src/tests/: base.py  config.py  daxian.py
tests/: conftest.py
tests/data/: astro.json  horoscope.json
tests/regression/: test_astrolabe.py  test_horoscope.py
